--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,7 @@ set_target_properties(${SUBPRROJECT_NAME} PROPERTIES LINK_DEPENDS_NO_SHARED true
 
 target_link_libraries(${SUBPRROJECT_NAME}
     PRIVATE
-        ${PROJECT_NAME}::MyDynamicLib
+        ${PROJECT_NAME}::Stack
         ${GTEST_BOTH_LIBRARIES}
         ${GMOCK_BOTH_LIBRARIES})
 
