--- a/core/stack/CMakeLists.txt
+++ b/core/stack/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(SUBPROJECT_NAME MyDynamicLib)
-file(GLOB_RECURSE SRC_LIST src/*.cpp)
+set(SUBPROJECT_NAME Stack)
+file(GLOB_RECURSE SRC_LIST src/*.cpp src/*.hpp)
 add_library(${PROJECT_NAME}${SUBPROJECT_NAME} SHARED ${SRC_LIST})
 add_library(${PROJECT_NAME}::${SUBPROJECT_NAME} ALIAS ${PROJECT_NAME}${SUBPROJECT_NAME})
 target_include_directories(${PROJECT_NAME}${SUBPROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
