--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,6 @@ include_directories(BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/ext/include")
 
 add_subdirectory(app)
 add_subdirectory(core/stack)
+add_subdirectory(util)
 add_subdirectory(test)
 add_subdirectory(ext EXCLUDE_FROM_ALL)
