--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SUBPROJECT_NAME Stack)
+set(SUBPROJECT_NAME Core)
 file(GLOB_RECURSE SRC_LIST src/*.cpp src/*.hpp)
 add_library(${PROJECT_NAME}${SUBPROJECT_NAME} SHARED ${SRC_LIST})
 add_library(${PROJECT_NAME}::${SUBPROJECT_NAME} ALIAS ${PROJECT_NAME}${SUBPROJECT_NAME})
