--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,7 +3,8 @@ add_executable(${PROJECT_NAME} ${SRC_LIST})
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
-        ${PROJECT_NAME}::Core)
+        ${PROJECT_NAME}::Core
+        ${PROJECT_NAME}::Util)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINK_DEPENDS_NO_SHARED true)
 
